--- a/templete/index.html
+++ b/templete/index.html
@@ -22,13 +22,69 @@
             </header>
 
             <main class="main">
-                <ul>
-                    <li>Product 1</li>
-                    <li>Product 2</li>
-                    <li>Product 3</li>
-                    <li>Product 4</li>
-                    <li>Product 5</li>
-                </ul>
+                <div class="content">
+                    <ul class="products">
+                        <li>
+                            <div class="product">
+                                <img class="product-image" src="images/shirt.jpg" alt="">
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$50</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="product">
+                                <img class="product-image" src="images/shirt.jpg" alt="">
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$50</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="product">
+                                <img class="product-image" src="images/shirt.jpg" alt="">
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$50</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="product">
+                                <img class="product-image" src="images/shirt.jpg" alt="">
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$50</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="product">
+                                <img class="product-image" src="images/shirt.jpg" alt="">
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$50</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </main>
 
             <footer class="footer">
