--- a/templete/index.html
+++ b/templete/index.html
@@ -13,6 +13,9 @@
         <div class="grid-container">
             <header class="header">
                 <div class="brand">
+                    <button onclick="openMenu()">
+                        &#9776;
+                    </button>
                     <a href="index.htm">E-commerce</a>
                 </div>
                 <div class="header-links">
@@ -20,6 +23,19 @@
                     <a href="signin.html">SignIn</a>
                 </div>
             </header>
+
+            <aside class="sidebar">
+                <h3>Shopping Categories</h3>
+                <button class="sidebar-close-button" onclick="closeMenu()">x</button>
+                <ul>
+                    <li>
+                        <a href="index.html">Pants</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Shits</a>
+                    </li>
+                </ul>
+            </aside>
 
             <main class="main">
                 <div class="content">
@@ -90,6 +106,16 @@
             <footer class="footer">
                 All right deserved.
             </footer>
+
+            <script>
+                function openMenu() {
+                    document.querySelector(".sidebar").classList.add("open")
+                }
+
+                function closeMenu() {
+                    document.querySelector(".sidebar").classList.remove("open")
+                }
+            </script>
         </div>
     </body>
 
